--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>AGIN K K</h1>
-<img src="agin.jpg" alt="Profile Picture" class="profile-pic">
+<img src="aginkk.jpg" alt="Profile Picture" class="profile-pic">
 
     <p>B.Sc. Computer Science Student</p>
   </header>
