--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <header>
     <h1>AGIN K K</h1>
 <img src="aginkk.jpg" alt="Profile Picture" class="profile-pic">
-
+    
     <p>B.Sc. Computer Science Student</p>
+    <p>Aspiring Developer | Tech Enthusiast</p>
   </header>
 
   <section class="about">
@@ -21,8 +22,9 @@
   <section class="experience">
     <h2>Academic Experience</h2>
     <ul>
-      <li><strong>Portfolio Building & Branding Bootcamp</strong> (July 2025)<br>
-      Explored tools like Canva, Linktree, and Themewagon for clean digital portfolios.</li>
+      <li><strong>Participant | Portfolio Building & Personal Branding Bootcamp</strong> (July 2025)<br><br>
+      <p>Gained foundational knowledge in creating professional portfolios and personal branding. 
+        Experienced in using tools like Canva, Linktree, and Themewagon to present work through clean, modern digital designs.</p></li>
     </ul>
   </section>
 
@@ -30,7 +32,10 @@
     <h2>Projects</h2>
     <ul>
       <li><strong>Local Tourist Guide App (In Progress)</strong><br>
-      Using Flutter, HTML, CSS, JavaScript to build an app that recommends destinations in Kozhikode based on mood.</li>
+     <p>Designing a mobile/web app to help users discover local tourist spots in Kozhikode based on mood and preferences like calm, chill, beach, or hills. 
+       Using Flutter and core web technologies (HTML, CSS, JavaScript) to build a clean, responsive interface. 
+       Planned features include category-based recommendations, weather updates, restaurant suggestions, and nearby facilities — aiming to make local tourism more accessible through simple, user-friendly design.
+      </p></li>
     </ul>
   </section>
 
