--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
   <section class="experience">
     <h2>Academic Experience</h2>
     <ul>
-      <li><strong>Participant | Portfolio Building & Personal Branding Bootcamp</strong> (July 2025)<br><br>
-      <p>Gained foundational knowledge in creating professional portfolios and personal branding. 
-        Experienced in using tools like Canva, Linktree, and Themewagon to present work through clean, modern digital designs.</p></li>
+      <li><strong>Participant | Portfolio Building & Personal Branding Bootcamp</strong> (July 2025)<br>
+      <p>Gained foundational knowledge in creating professional portfolios and personal branding. Experienced in using tools like Canva, Linktree, and Themewagon to present work through clean, modern digital designs.</p></li>
     </ul>
   </section>
 
@@ -32,9 +31,7 @@
     <h2>Projects</h2>
     <ul>
       <li><strong>Local Tourist Guide App (In Progress)</strong><br>
-     <p>Designing a mobile/web app to help users discover local tourist spots in Kozhikode based on mood and preferences like calm, chill, beach, or hills. 
-       Using Flutter and core web technologies (HTML, CSS, JavaScript) to build a clean, responsive interface. 
-       Planned features include category-based recommendations, weather updates, restaurant suggestions, and nearby facilities — aiming to make local tourism more accessible through simple, user-friendly design.
+       <p>Designing a mobile/web app to help users discover local tourist spots in Kozhikode based on mood and preferences like calm, chill, beach, or hills. Using Flutter and core web technologies (HTML, CSS, JavaScript) to build a clean, responsive interface. Planned features include category-based recommendations, weather updates, restaurant suggestions, and nearby facilities — aiming to make local tourism more accessible through simple, user-friendly design.
       </p></li>
     </ul>
   </section>
@@ -44,14 +41,14 @@
     <ul>
       <li><strong>B.Sc. Computer Science</strong><br>
       College of Applied Science IHRD, Kozhikode (2023–2026)</li>
-      <li><strong>Higher Secondary (Bio-Science)</strong><br>
+      <li><strong>Higher Secondary Education-(Bio-Science)</strong><br>
       Nanminda HSS, Balussery, Kozhikode (2021–2023)</li>
     </ul>
   </section>
 
   <section class="skills">
     <h2>Skills</h2>
-    <p><strong>Technical:</strong> C, HTML, CSS, DBMS, SQL, Bootstrap, Canva, Linktree, Themewagon</p>
+    <p><strong>Technical:</strong> C, HTML, CSS, DBMS, SQL, Bootstrap, Canva, Linktree,GitHub-(Fundamentals)</p>
     <p><strong>Soft Skills:</strong> Communication, Teamwork, Time Management, Adaptability, Creativity</p>
   </section>
 
@@ -69,7 +66,12 @@
 
   <section class="languages">
     <h2>Languages</h2>
-    <p>English, Malayalam, Hindi (Basic), Tamil (Basic)</p>
+    <ul type="square">
+      <li>English</li>
+      <li>Malayalam</li>
+      <li>Hindi (Basic)</li>
+      <li>Tamil (Basic)</li>
+    </ul>    
   </section>
 
   <section class="contact">
